Fix: Prevent scroll bounce on iOS

--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -1,14 +1,20 @@
 
 // Content 
 
-html, body {
+html {
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
+}
+
+body {
 	background: #505050;
 	height: 100%;
 	width: 100%;
 	margin: 0;
 	padding: 0;
 	position: fixed;
-	overflow: hidden;
+	overflow: auto;
 }
 
 .main-content {
